# AudioServer2.0

./: .gitignore  Project.md  README.md
backend/: .env.example  Cargo.toml
backend/migrations/: 001_user_settings.sql  002_admin_users.sql  003_players.sql  004_audio_media.sql
backend/src/: config.rs  main.rs  redis_pool.rs  router.rs
backend/src/api/: admin_ticket.rs  auth.rs  media.rs  mod.rs  player.rs  sessions.rs  settings.rs  stats.rs
backend/src/auth/: admin_login_ott.rs  admin_ticket.rs  extractor.rs  jwt.rs  mod.rs  ott.rs  player_ott.rs
backend/src/db/: mod.rs
backend/src/storage/: mod.rs
backend/src/ws/: admin.rs  handler.rs  mod.rs
client-lite/: package-lock.json  package.json  svelte.config.js
client-lite/src/: app.html
client-lite/src/lib/: ws-types.ts
client-lite/src/routes/: +page.svelte
docs/: events.md
plugin/: build.gradle  settings.gradle
plugin/common/: build.gradle
plugin/common/src/main/java/dev/audioserver/dto/: TokenPayload.java
plugin/common/src/main/java/dev/audioserver/event/: AudioEvent.java  AudioPlayEvent.java  AudioStopEvent.java  RegionEnterEvent.java
plugin/common/src/main/java/dev/audioserver/redis/: RedisManager.java
plugin/paper/: build.gradle
plugin/paper/src/main/java/dev/audioserver/: AudioServerPlugin.java
plugin/paper/src/main/java/dev/audioserver/command/: AudioCommand.java
plugin/paper/src/main/resources/: config.yml  paper-plugin.yml
plugin/velocity/: build.gradle
portal/: package-lock.json  package.json  proxy.ts
portal/app/: globals.css  layout.tsx  page.tsx
portal/app/(admin)/: layout.tsx
portal/app/(admin)/dashboard/: page.tsx
portal/app/(admin)/events/: page.tsx
portal/app/(admin)/media/: page.tsx
portal/app/(admin)/regions/: page.tsx
portal/app/(admin)/sessions/: page.tsx
portal/app/(admin)/settings/: page.tsx
portal/app/(player)/: layout.tsx
portal/app/(player)/preferences/: page.tsx
portal/app/actions/: auth.ts
portal/app/api/admin-ticket/: route.ts
portal/app/api/player-relay/[...path]/: route.ts
portal/app/api/relay/[...path]/: route.ts
portal/app/auth/admin-callback/: route.ts
portal/app/auth/callback/: route.ts
portal/app/auth/error/: page.tsx
portal/app/auth/player-login/: page.tsx
portal/app/login/: page.tsx
portal/components/: nav.tsx  stat-card.tsx
portal/lib/: api.ts  auth.ts  player-auth.ts  relay.ts  ws-types.ts
(+8 files in other folders)
